# Projet_Drone_Cible

./: README.md  main.cpp  mainwindow.cpp  mainwindow.h
Projet_Drone_Cible-IHM/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Projet_Drone_Cible-IHM/ressources/: map.html
com_manette_cpp/: CMakeLists.txt  package.xml
com_manette_cpp/include/: SerialReader.hpp  SerialReader.hpp.back
com_manette_cpp/src/: SerialReader_node.cpp.back  main.cpp  main.cpp.back  serial_reader2.cpp
motor_controller_cpp/: CMakeLists.txt  package.xml
motor_controller_cpp/include/: motor_controller.hpp
motor_controller_cpp/src/: motor_controller.cpp  motor_controller.cpp.back  motor_controller_node.cpp
ressources/: map.html
